# pickupcom-desktop

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/event/: mod.rs
src-tauri/src/system/: common.rs  mod.rs
src-tauri/src/system/mac/: cpu.rs  disk.rs  dto.rs  gpu.rs  memory.rs  mod.rs  os.rs
src-tauri/src/system/windows/: cpu.rs  disk.rs  dto.rs  gpu.rs  memory.rs  mod.rs  motherboard.rs  os.rs  platform.rs
src-tauri/src/system/windows/native/: mod.rs  win32_disk.rs
src/components/common/: loading-screen.tsx  navbar.tsx  retry-screen.tsx
src/components/estimate/: estimate-button.tsx
src/components/hardware-spec/: debug-panel.tsx  spec-table.tsx  system-info-button-group.tsx  system-info.tsx  system-refresh-button.tsx  utility-dropdown-menu.tsx
src/components/ui/: sonner.tsx
src/constants/: cpu.ts  disk.ts  gpu.ts  mb.ts  ram.ts  url.ts
src/hooks/: use-estimate.ts  use-pc-id.ts  use-pc-search-params.ts  use-save-pc-spec.ts  use-store.ts  use-systsm-info.ts
src/lib/nuqs/: json-search-params.ts
src/lib/react-query/: query-provider.tsx
src/lib/zod/schemas/: hardware.ts
src/pages/: home.tsx  not-found.tsx
src/routes/: __root.tsx
src/services/estimate/: encode.ts
src/services/system/: get-pc-id.ts  get-system.ts
src/services/system/format/: byte.ts  cpu-format.ts  disk-format.ts  gpu-format.ts  mb-format.ts  ram-format.ts
src/services/tauri/: invoke.ts  store.ts
src/shared/: env.ts
src/shared/helpers/: is-production.ts
src/types/: non-nullable-infer.ts
src/types/api/dto/: common.ts  computer.ts  cpu.ts  disk.ts  gpu.ts  mb.ts  os.ts  ram.ts
src/types/system/dto/: system.ts
src/types/system/dto/mac/: cpu.ts  disk.ts  gpu.ts  index.ts  os.ts  ram.ts
src/types/system/dto/windows/: cpu.ts  disk.ts  gpu.ts  index.ts  mb.ts  os.ts  platform.ts  (+1 more)
